--- a/index.html
+++ b/index.html
@@ -27,21 +27,24 @@
             </div>
         </div>
         <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1 embed-responsive embed-responsive-21by9">
+                <iframe class="embed-responsive-item" width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8"
+                    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            </div>
             <div class="col-md-5 offset-md-1">
                 <h2>Lava Survivor</h2>
-                <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect all
+                <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect
+                    all
                     of the objects. You must choose wisely and quickly need to avoid being consumed by the rising lava!
                 </p>
                 <h4>Technologies Used</h4>
-                <p>C# and the Unity Game Engine. World machine was also used to create the terrain that contains the level,
+                <p>C# and the Unity Game Engine. World machine was also used to create the terrain that contains the
+                    level,
                     while most other assets were readily availabe from the asset store.
                 </p>
-                <h5><a href="https://github.com/ashalkey/Lava-Survivor">Check out the code or clone the project to download
+                <h5><a href="https://github.com/ashalkey/Lava-Survivor">Check out the code or clone the project to
+                        download
                         the .exe file to play the game here!</a></h5>
-            </div>
-            <div class="col-md-4 offset-md-1 embed-responsive embed-responsive-21by9">
-                <iframe class="embed-responsive-item" width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media"
-                    allowfullscreen></iframe>
 
             </div>
             <div class="col-md-12 text-center">
@@ -51,21 +54,25 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
-                <img class="rounded-circle project-pic img-fluid" src="assets/images/eatDaBurger.PNG">
-            </div>
-            <div class="col-md-4 offset-md-1">
                 <h2>Eat-Da-Burger!</h2>
-                <p>This is a full stack web application, where you are able to enter burgers you would like to serve up and
-                    choose to devour any available burgers. This project is hosted on heroku so many people can interact
+                <p>This is a full stack web application, where you are able to enter burgers you would like to serve up
+                    and
+                    choose to devour any available burgers. This project is hosted on heroku so many people can
+                    interact
                     with the application while the data persists for others to view.
                 </p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, JavaScript, Node.js, Handlebars.js, Bootstrap, Heroku, and SQL</p>
+                <p>HTML, CSS, JavaScript, Node.js, Express.js, Handlebars.js, Bootstrap, Heroku, and SQL</p>
                 <h5><a href="https://github.com/ashalkey/eat-da-burger">Check out the code here!</a></h5>
+
+            </div>
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded-circle project-pic img-fluid" src="assets/images/eatDaBurger.PNG">
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
                 <img class="logo-img" src="assets/images/nodejs.png">
+                <img class="logo-img" src="assets/images/express-js-logo.png">
                 <img class="logo-img" src="assets/images/handlebars.png">
                 <img class="logo-img" src="assets/images/bootstrap.png">
                 <img class="logo-img" src="assets/images/heroku.png">
@@ -78,22 +85,24 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
+                <img class="rounded project-pic img-fluid" src="assets/images/ffBG.PNG">
+            </div>
+            <div class="col-md-4 offset-md-1">
                 <h2>Friend Finder</h2>
-                <p>This is a full stack web application where your answers to a survey are calculated to find possible friends
-                    who share the same interests as you and have also completed the survey. The project is hosted on heroku,
+                <p>This is a full stack web application where your answers to a survey are calculated to find possible
+                    friends
+                    who share the same interests as you and have also completed the survey. The project is hosted on
+                    heroku,
                     making it available to various users and allowing their profiles to persist.
                 </p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, JavaScript, Node.js, jQuery, Handlebars.js, Bootstrap, Heroku</p>
+                <p>HTML, CSS, JavaScript, Node.js, Express.js, jQuery, Handlebars.js, Bootstrap, Heroku</p>
                 <h5><a href="https://github.com/ashalkey/friend-finder">Check out the code here!</a></h5>
-            </div>
-            <div class="col-md-4 offset-md-1">
-                <img class="rounded project-pic img-fluid" src="assets/images/ffBG.PNG">
-
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
                 <img class="logo-img" src="assets/images/nodejs.png">
+                <img class="logo-img" src="assets/images/express-js-logo.png">
                 <img class="logo-img" src="assets/images/jquery.png">
                 <img class="logo-img" src="assets/images/handlebars.png">
                 <img class="logo-img" src="assets/images/bootstrap.png">
@@ -106,13 +115,39 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
+                <h2>Fridge-To-Table</h2>
+                <p> Have you ever been staring at the ingredients in your fridge, wondering what new refreshing meal
+                    you could make out of them? Well, the Fridge-To-Table app aims to
+                    make your journey towards your next creative meal easier by allowing you to input ingredients that
+                    you have in your fridge and then see recipes that you can make with those ingredients!
+                    You can also view an instructional video on how to make that dish!
+                </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, Firebaseui, Firebase, Edamam API, Youtube IFrame Player API
+                </p>
+                <h5><a href="https://github.com/ashalkey/fridge-to-table">Check out the code here!</a></h5>
+            </div>
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded project-pic img-fluid" src="assets/images/Fridge-To-Table.png">
+
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/firebase.png">
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
                 <img class="rounded project-pic img-fluid" src="assets/images/demo.gif">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Bamazon</h2>
-                <p>You can use this node application to send queries to a database using SQL. After running the application
-                    you will be shown a table filled with information conatained in the products table and can choose which
-                    item to purchase. Once you decide on an item, choose a quantity so that your total can be calculated.</p>
+                <p>You can use this node application to send queries to a database using SQL. After running the
+                    application
+                    you will be shown a table filled with information conatained in the products table and can choose
+                    which
+                    item to purchase. Once you decide on an item, choose a quantity so that your total can be
+                    calculated.</p>
                 <h4>Technologies Used</h4>
                 <p>JavaScript, Node.js, SQL</p>
                 <h5><a href="https://github.com/ashalkey/bamazon-app">Check out the code here!</a></h5>
@@ -126,15 +161,18 @@
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>LIRI - Language Interpretation and Recognition Interface</h2>
-                <p>There are various commands in this node application which allow you to send AJAX requests to a news api
-                    to retrieve the top headlines, the OMDB api to look up movie information by the title of the film, the
-                    Spotify API to retrieve song information, and to run a command from the command line in order to read
+                <p>There are various commands in this node application which allow you to send AJAX requests to a news
+                    api
+                    to retrieve the top headlines, the OMDB api to look up movie information by the title of the film,
+                    the
+                    Spotify API to retrieve song information, and to run a command from the command line in order to
+                    read
                     data from a file.</p>
                 <h4>Technologies Used</h4>
                 <p>Javascript, Node.js, Spotify API, NewsAPI, OMDB API</p>
                 <h5><a href="https://github.com/ashalkey/liri-node-app">Check out the code here!</a></h5>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-md-5 offset-md-1">
                 <img class="rounded project-pic img-fluid" src="assets/images/LIRI.png">
 
             </div>
@@ -149,8 +187,10 @@
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Public Transportation Scheduler</h2>
-                <p>This project uses Firebase in order to log train schedules which will stay up to date when the page is
-                    refreshed. The moment.js library was particularly useful in converting times to formats which made the
+                <p>This project uses Firebase in order to log train schedules which will stay up to date when the page
+                    is
+                    refreshed. The moment.js library was particularly useful in converting times to formats which made
+                    the
                     calculations easy to execute and output the data in whatever format you like. </p>
                 <h4>Technologies Used</h4>
                 <p>HTML, CSS, JavaScript, jQuery, Moment.js, Firebase</p>
@@ -163,20 +203,22 @@
                 <img class="logo-img" src="assets/images/firebase.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TransportationScheduler.html'">Go to the deployed project!
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TransportationScheduler.html'">Go
+                    to the deployed project!
                 </button>
             </div>
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>Giftastic!</h2>
-                <p>By sending AJAX requests to the the GIPHY API, you can create buttons that can load up some of your favorite
+                <p>By sending AJAX requests to the the GIPHY API, you can create buttons that can load up some of your
+                    favorite
                     GIFs! </p>
                 <h4>Technologies Used</h4>
                 <p>HTML, CSS, JavaScript, jQuery, GIPHY API</p>
                 <h5><a href="https://github.com/ashalkey/GifTastic">Check out the code here!</a></h5>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-md-5 offset-md-1">
                 <img class="rounded project-pic img-fluid" src="assets/images/MartialArtsBackground.jpg">
 
             </div>
@@ -185,7 +227,8 @@
                 <img class="logo-img" src="assets/images/jquery.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/GifTastic'">Go to the deployed project!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/GifTastic'">Go
+                    to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
@@ -194,8 +237,10 @@
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Martial Arts Origins Trivia Game</h2>
-                <p>This game will test your knowledge of various styles of martial arts from around the world. You have a
-                    limited amount of time in order to answer all of the questions, but you'll be able to keep resetting
+                <p>This game will test your knowledge of various styles of martial arts from around the world. You have
+                    a
+                    limited amount of time in order to answer all of the questions, but you'll be able to keep
+                    resetting
                     the game until you've gained enough knowledge to complete the game!</p>
                 <h4>Technologies Used</h4>
                 <p>HTML, CSS, JavaScript, jQuery</p>
@@ -207,20 +252,22 @@
                 <img class="logo-img" src="assets/images/jquery.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TriviaGame'">Go to the deployed project!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TriviaGame'">Go
+                    to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>Martial Arts Movies Hangman</h2>
-                <p>This game tests your knowledge of well known martial arts films. You can keep track of each film that
+                <p>This game tests your knowledge of well known martial arts films. You can keep track of each film
+                    that
                     you've guessed correctly, but be careful to not run out of attempts!
                 </p>
                 <h4>Technologies Used</h4>
                 <p>HTML, CSS, JavaScript</p>
                 <h5><a href="https://github.com/ashalkey/Word-Guess-Game">Check out the code here!</a></h5>
             </div>
-            <div class="col-md-4 offset-md-1">
+            <div class="col-md-5 offset-md-1">
                 <img class="rounded project-pic img-fluid" src="assets/images/BruceLee.jpg">
 
             </div>
@@ -228,7 +275,8 @@
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/WordGuessGame'">Go to the deployed project!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/WordGuessGame'">Go
+                    to the deployed project!</button>
             </div>
         </div>
 
